--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="133dp"
         android:layout_height="72dp"
         android:layout_marginTop="76dp"
-        android:text="@string/chercher"
+        android:text="@string/mainActivity_findBtn_string"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="132dp"
         android:layout_height="72dp"
         android:layout_marginTop="256dp"
-        android:text="@string/se_cacher"
+        android:text="@string/mainActivity_hideBtn_string"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
